--- a/css/sassquatch.css
+++ b/css/sassquatch.css
@@ -116,7 +116,9 @@ name: animation
 category: Sass Utils | Mixins & Placeholders
 ---
 */
-.toggleButton-input:checked + .toggleButton-label, .animate--bounceInSubtle, .animate--spin {
+.toggleButton-input:checked + .toggleButton-label,
+.animate--bounceInSubtle,
+.animate--spin {
   -webkit-transform-origin: center center;
   -ms-transform-origin: center center;
   transform-origin: center center; }
@@ -580,8 +582,7 @@ table, dl, dd,
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section {
   display: block;
   margin: 0;
-  padding: 0;
-  margin-bottom: 16px; }
+  padding: 0; }
 
 form, legend {
   margin-bottom: 0; }
@@ -1694,62 +1695,62 @@ Class                         | Description
 
 @media only screen and (min-width: 640px) {
   .atMedium_gridList--has1 > li {
-    width: 100%; }
-
+    width: 100%; } }
+@media only screen and (min-width: 840px) {
+  .atLarge_gridList--has1 > li {
+    width: 100%; } }
+@media only screen and (min-width: 640px) {
   .atMedium_gridList--has2 > li {
-    width: 50%; }
-
+    width: 50%; } }
+@media only screen and (min-width: 840px) {
+  .atLarge_gridList--has2 > li {
+    width: 50%; } }
+@media only screen and (min-width: 640px) {
   .atMedium_gridList--has3 > li {
-    width: 33.33333%; }
-
+    width: 33.33333%; } }
+@media only screen and (min-width: 840px) {
+  .atLarge_gridList--has3 > li {
+    width: 33.33333%; } }
+@media only screen and (min-width: 640px) {
   .atMedium_gridList--has4 > li {
-    width: 25%; }
-
+    width: 25%; } }
+@media only screen and (min-width: 840px) {
+  .atLarge_gridList--has4 > li {
+    width: 25%; } }
+@media only screen and (min-width: 640px) {
   .atMedium_gridList--has5 > li {
-    width: 20%; }
-
+    width: 20%; } }
+@media only screen and (min-width: 840px) {
+  .atLarge_gridList--has5 > li {
+    width: 20%; } }
+@media only screen and (min-width: 640px) {
   .atMedium_gridList--has6 > li {
-    width: 16.66667%; }
-
+    width: 16.66667%; } }
+@media only screen and (min-width: 840px) {
+  .atLarge_gridList--has6 > li {
+    width: 16.66667%; } }
+@media only screen and (min-width: 640px) {
   .atMedium_gridList--has7 > li {
-    width: 14.28571%; }
-
+    width: 14.28571%; } }
+@media only screen and (min-width: 840px) {
+  .atLarge_gridList--has7 > li {
+    width: 14.28571%; } }
+@media only screen and (min-width: 640px) {
   .atMedium_gridList--has8 > li {
-    width: 12.5%; }
-
+    width: 12.5%; } }
+@media only screen and (min-width: 840px) {
+  .atLarge_gridList--has8 > li {
+    width: 12.5%; } }
+@media only screen and (min-width: 640px) {
   .atMedium_gridList--has9 > li {
-    width: 11.11111%; }
-
+    width: 11.11111%; } }
+@media only screen and (min-width: 840px) {
+  .atLarge_gridList--has9 > li {
+    width: 11.11111%; } }
+@media only screen and (min-width: 640px) {
   .atMedium_gridList--has10 > li {
     width: 10%; } }
 @media only screen and (min-width: 840px) {
-  .atLarge_gridList--has1 > li {
-    width: 100%; }
-
-  .atLarge_gridList--has2 > li {
-    width: 50%; }
-
-  .atLarge_gridList--has3 > li {
-    width: 33.33333%; }
-
-  .atLarge_gridList--has4 > li {
-    width: 25%; }
-
-  .atLarge_gridList--has5 > li {
-    width: 20%; }
-
-  .atLarge_gridList--has6 > li {
-    width: 16.66667%; }
-
-  .atLarge_gridList--has7 > li {
-    width: 14.28571%; }
-
-  .atLarge_gridList--has8 > li {
-    width: 12.5%; }
-
-  .atLarge_gridList--has9 > li {
-    width: 11.11111%; }
-
   .atLarge_gridList--has10 > li {
     width: 10%; } }
 /*doc
@@ -1897,7 +1898,7 @@ _Can be used in combination with any other component
 */
 .chunk {
   display: block;
-  margin-bottom: 16px; }
+  margin-bottom: 16px !important; }
 
 /*doc
 ---
@@ -2246,16 +2247,16 @@ Class                   | Description
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-lines: multiple;
-  box-lines: multiple;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-orient: horizontal;
-  box-orient: horizontal;
-  -webkit-flex-direction: row;
-  flex-direction: row;
-  -ms-flex-direction: row;
+  -webkit-box-lines: single;
+  box-lines: single;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-box-orient: vertical;
+  box-orient: vertical;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-direction: column;
   -webkit-box-pack: start;
   box-pack: start;
   -webkit-justify-content: flex-start;
@@ -2278,37 +2279,49 @@ Class                   | Description
   -ms-flex-preferred-size: 100%; }
 
 @media only screen and (min-width: 640px) {
-  .atMedium_stack--spread > .stack-item {
-    -webkit-flex-basis: auto;
-    flex-basis: auto;
-    -ms-flex-preferred-size: auto;
-    padding-left: 16px; }
-    .atMedium_stack--spread > .stack-item:first-child {
-      padding-left: 0; }
-  .atMedium_stack--spread .stack-item--shrink {
-    -webkit-flex-grow: 0;
-    flex-grow: 0;
-    -ms-flex-positive: 0;
-    -webkit-flex-shrink: 1;
-    flex-shrink: 1;
-    -ms-flex-negative: 1;
-    width: initial; } }
+  .atMedium_stack--spread {
+    -webkit-box-orient: horizontal;
+    box-orient: horizontal;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -ms-flex-direction: row; }
+    .atMedium_stack--spread > .stack-item {
+      -webkit-flex-basis: auto;
+      flex-basis: auto;
+      -ms-flex-preferred-size: auto;
+      padding-left: 16px; }
+      .atMedium_stack--spread > .stack-item:first-child {
+        padding-left: 0; }
+    .atMedium_stack--spread .stack-item--shrink {
+      -webkit-flex-grow: 0;
+      flex-grow: 0;
+      -ms-flex-positive: 0;
+      -webkit-flex-shrink: 1;
+      flex-shrink: 1;
+      -ms-flex-negative: 1;
+      width: initial; } }
 @media only screen and (min-width: 840px) {
-  .atLarge_stack--spread > .stack-item {
-    -webkit-flex-basis: auto;
-    flex-basis: auto;
-    -ms-flex-preferred-size: auto;
-    padding-left: 16px; }
-    .atLarge_stack--spread > .stack-item:first-child {
-      padding-left: 0; }
-  .atLarge_stack--spread .stack-item--shrink {
-    -webkit-flex-grow: 0;
-    flex-grow: 0;
-    -ms-flex-positive: 0;
-    -webkit-flex-shrink: 1;
-    flex-shrink: 1;
-    -ms-flex-negative: 1;
-    width: initial; } }
+  .atLarge_stack--spread {
+    -webkit-box-orient: horizontal;
+    box-orient: horizontal;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -ms-flex-direction: row; }
+    .atLarge_stack--spread > .stack-item {
+      -webkit-flex-basis: auto;
+      flex-basis: auto;
+      -ms-flex-preferred-size: auto;
+      padding-left: 16px; }
+      .atLarge_stack--spread > .stack-item:first-child {
+        padding-left: 0; }
+    .atLarge_stack--spread .stack-item--shrink {
+      -webkit-flex-grow: 0;
+      flex-grow: 0;
+      -ms-flex-positive: 0;
+      -webkit-flex-shrink: 1;
+      flex-shrink: 1;
+      -ms-flex-negative: 1;
+      width: initial; } }
 /*doc
 ---
 title: View
@@ -2551,16 +2564,16 @@ category: UI Components
 ```html_example
 <ul class="inlineblockList">
 	<li>
-		<a href="#" class="avatar avatar--person" style="background-image: url(http://photos3.meetupstatic.com/photos/member/9/1/8/4/thumb_141217252.jpeg);"></a>
+		<a href="#" class="avatar avatar--person" style="background-image: url(http://photos3.meetupstatic.com/photos/member/9/1/8/4/thumb_141217252.jpeg);">Member Name</a>
 	</li>
 	<li>
-		<a href="#" class="avatar avatar--person avatar--small" style="background-image: url(http://photos3.meetupstatic.com/photos/member/9/1/8/4/thumb_141217252.jpeg);"></a>
+		<a href="#" class="avatar avatar--person avatar--small" style="background-image: url(http://photos3.meetupstatic.com/photos/member/9/1/8/4/thumb_141217252.jpeg);">Member Name</a>
 	</li>
 	<li>
-		<a href="#" class="avatar avatar--person avatar--big" style="background-image: url(http://photos4.meetupstatic.com/photos/member/d/0/2/c/member_156833292.jpeg);"></a>
+		<a href="#" class="avatar avatar--person avatar--big" style="background-image: url(http://photos4.meetupstatic.com/photos/member/d/0/2/c/member_156833292.jpeg);">Member Name</a>
 	</li>
 	<li>
-		<a href="#" class="avatar avatar--person avatar--fb-friend" style="background-image: url(http://photos4.meetupstatic.com/photos/member/5/a/2/thumb_109681442.jpeg);"></a>
+		<a href="#" class="avatar avatar--person avatar--fb-friend" style="background-image: url(http://photos4.meetupstatic.com/photos/member/5/a/2/thumb_109681442.jpeg);">Member Name</a>
 	</li>
 </ul>
 ```
@@ -2603,6 +2616,7 @@ Class                     | Description
 .avatar {
   background-color: #f3f6f9;
   background-position: center 42%;
+  color: transparent;
   display: inline-block;
   font-size: 24px;
   height: 36px;
@@ -2929,6 +2943,7 @@ _(The inline style on the card element is for documentation purposes only)_
 .card {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  display: block;
   background: white;
   border: 1px solid rgba(0, 0, 0, 0.12);
   border-radius: 3px;
@@ -3299,12 +3314,14 @@ name: keepAspect
 category: Modifier Classes
 ---
 Maintains a given aspect ratio for flexible media.
+Apply to elements with background images.
 
 Class              | Description
 ------------------ | ------------------------------
 `.keepAspect`      | maintains 1-1 aspect ratio when resized
 `.keepAspect--16-9`| maintains 16-9 aspect ratio when resized
 `.keepAspect--2-1` | maintains 2-1 aspect ratio when resized
+`.keepAspect--2-3` | maintains 2-3 aspect ratio when resized
 
 */
 .keepAspect {
@@ -3314,15 +3331,26 @@ Class              | Description
     display: block;
     padding-top: 100%; }
 
-.keepAspect--16-9:before {
-  content: '';
-  display: block;
-  padding-top: 56.25%; }
+.keepAspect--16-9 {
+  margin-bottom: 0; }
+  .keepAspect--16-9:before {
+    content: '';
+    display: block;
+    padding-top: 56.25%; }
 
-.keepAspect--2-1:before {
-  content: '';
-  display: block;
-  padding-top: 50%; }
+.keepAspect--2-1 {
+  margin-bottom: 0; }
+  .keepAspect--2-1:before {
+    content: '';
+    display: block;
+    padding-top: 50%; }
+
+.keepAspect--2-3 {
+  margin-bottom: 0; }
+  .keepAspect--2-3:before {
+    content: '';
+    display: block;
+    padding-top: 150%; }
 
 /*doc
 ---
